mudanças nos containers

--- a/mysitetemplate/src/app/components/banner/banner.component.html
+++ b/mysitetemplate/src/app/components/banner/banner.component.html
@@ -1,8 +1,15 @@
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-  <span class="align-middle">
-    <h1 class="display-3 text-white">Desenvolvedor Web.</h1>
-    <p class="lead text-white">Trabalho para que a sua empresa ganhe visibilidade na Internet e conquiste seu público-alvo com mais eficiência..</p>
-</span>
-</div>
-</div>
+
+<header>
+  <div class="overlay"></div>
+  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+    <source src="https://v.ftcdn.net/02/86/86/16/700_F_286861642_P0q7XszMuozNlEVO4sAWfdMtLEnOwHXB_ST.mp4" type="video/mp4">
+  </video>
+  <div class="container h-100">
+    <div class="d-flex h-100 text-center align-items-center">
+      <div class="w-100 text-white">
+        <h1 class="display-3">Fullstack Developer</h1>
+        <p class="lead mb-0">Trabalho para que a sua empresa ganhe visibilidade na Internet e conquiste seu público-alvo com mais eficiência.</p>
+      </div>
+    </div>
+  </div>
+</header>
