--- a/mysitetemplate/src/app/components/navbar/navbar.component.html
+++ b/mysitetemplate/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav #nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
         <a class="navbar-brand" href="#"><img src="http://piresthiago.com.br/images/icons/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,6 +11,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Portfólio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sobre</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Blog</a>
