--- a/mysitetemplate/src/app/components/social-network-banner/social-network-banner.component.html
+++ b/mysitetemplate/src/app/components/social-network-banner/social-network-banner.component.html
@@ -1,30 +1,58 @@
-<div class="jumbotron jumbotron-fluid">
+<div class="social-box">
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <p class="text-center"><b>
-                        <h2> Siga-me nas redes sociais: </h2>
-                    </b></p>
-            </div>
+      <div class="row">
+        <div class="col text-center">
+            <p>
+                    <h3> Redes Sociais: </h3>
         </div>
-        <div class="row">
-            <div class="col-sm text-center">
-                <img class="img-fluid" src="https://pbs.twimg.com/profile_images/1157035760085684224/iuxTnT5g.jpg"
-                    alt="..." class="rounded-circle"><br>
-                <p>Github</p>
-            </div>
-            <div class="col-sm text-center">
-                <img class="img-fluid"
-                    src="https://lh3.googleusercontent.com/fqYJHtyzZzA4vacRzeJoB93QNvA5-mvR-8UB5oVLxdYDSTpfLp_KgYD4IqVGJUgFEJo"
-                    alt="..." class="rounded-circle"><br>
-                <p>Linkedin</p>
-            </div>
-            <div class="col-sm text-center">
-                <img class="img-fluid"
-                    src="https://is2-ssl.mzstatic.com/image/thumb/Purple114/v4/df/76/95/df7695b1-e165-90ab-eecb-515727ddb7fe/Prod-0-0-1x_U007emarketing-0-0-0-6-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/246x0w.png"
-                    alt="..." class="rounded-circle"><br>
-                <p>Instagram</p>
-            </div>
-        </div>
+    </div>
+     	<div class="row">
+			 
+			    <div class="col-lg-4 col-xs-12 text-center">
+					<div class="box">
+                        <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+						<div class="box-title">
+							<h3>Instagram</h3>
+						</div>
+						<div class="box-text">
+							<span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
+						</div>
+						<div class="box-btn">
+						    <a href="#">Learn More</a>
+						</div>
+					 </div>
+				</div>	 
+				
+				 <div class="col-lg-4 col-xs-12  text-center">
+					<div class="box">
+					    <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
+						<div class="box-title">
+							<h3>Linkedin</h3>
+						</div>
+						<div class="box-text">
+							<span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
+						</div>
+						<div class="box-btn">
+						    <a href="#">Learn More</a>
+						</div>
+					 </div>
+				</div>	 
+
+				 <div class="col-lg-4 col-xs-12 text-center">
+					<div class="box">
+                        <i class="fa fa-github fa-3x" aria-hidden="true"></i>
+						<div class="box-title">
+							<h3>Github</h3>
+						</div>
+						<div class="box-text">
+							<span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
+						</div>
+						<div class="box-btn">
+						    <a href="#">Learn More</a>
+						</div>
+					 </div>
+				</div>
+		
+		</div>		
     </div>
 </div>
