--- a/mysitetemplate/src/app/components/banner/banner.component.html
+++ b/mysitetemplate/src/app/components/banner/banner.component.html
@@ -2,7 +2,7 @@
 <header>
   <div class="overlay"></div>
   <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-    <source src="https://v.ftcdn.net/02/86/86/16/700_F_286861642_P0q7XszMuozNlEVO4sAWfdMtLEnOwHXB_ST.mp4" type="video/mp4">
+    <source src="#https://v.ftcdn.net/02/86/86/16/700_F_286861642_P0q7XszMuozNlEVO4sAWfdMtLEnOwHXB_ST.mp4" type="video/mp4">
   </video>
   <div class="container h-100">
     <div class="d-flex h-100 text-center align-items-center">
